deploy/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2021-05-27T14:46:09Z"
  labels:
    app: loki
    app.kubernetes.io/managed-by: Helm
    chart: loki-2.5.0
    heritage: Helm
    release: loki
  name: loki
  namespace: monitoring
  resourceVersion: "1132335"
  uid: 6e897f23-84a3-49d6-b0a7-e971c76035b9
spec:
  clusterIP: 10.43.82.180
  clusterIPs:
  - 10.43.82.180
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2021-05-27T14:46:09Z"
  labels:
    app: loki
    app.kubernetes.io/managed-by: Helm
    chart: loki-2.5.0
    heritage: Helm
    release: loki
    variant: headless
  name: loki-headless
  namespace: monitoring
  resourceVersion: "1132333"
  uid: d929fe7a-da70-465a-b5b9-31dea2fa90d1
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
