deploy/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "loki.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki
            port:
              number: 3100
